<resources>
    <string name="app_name">Azad Cabs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="sign_in">Sign In</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="regis">Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="mobile">Mobile</string>
    <string name="login">Login</string>
</resources>
