<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home1"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/sign_in" />
        <!--<item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/contact_us" />-->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_comment_black_24dp"
                android:title="@string/feedback" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
